--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_TOKEN=<your-telegram-bot-token>
+TELEGRAM_TOKEN=<6032498675:AAHpZPvPU4YjlXes_G2kKTEGw0XheduiZBM>
 GPT_API_KEY=<your-chatgpt-api-token>
