--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 TELEGRAM_TOKEN=<6032498675:AAHpZPvPU4YjlXes_G2kKTEGw0XheduiZBM>
-GPT_API_KEY=<your-chatgpt-api-token>
+GPT_API_KEY=<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>
